squashing bugs, small style changes

--- a/client/src/components/Overview/OverviewStyles.css
+++ b/client/src/components/Overview/OverviewStyles.css
@@ -67,7 +67,7 @@ body {
 }
 
 .up-arrow {
-  top: 2%;
+  top: 1%;
 }
 
 .down-arrow {
@@ -90,8 +90,8 @@ body {
   margin-left: 2%;
   --mask: linear-gradient(to bottom,
     rgba(0,0,0, 0) 0,
-    rgba(0,0,0, 1) 5%,
-    rgba(0,0,0, 1) 95%,
+    rgba(0,0,0, 1) 8%,
+    rgba(0,0,0, 1) 92%,
     rgba(0,0,0, 0) 100%
   );
   -webkit-mask: var(--mask);
@@ -121,10 +121,6 @@ body {
   width: 65%;
   border: 1px solid #000000;
   border-radius: 10%;
-}
-
-.carousel-arrow {
-  z-index: 2;
 }
 
 .active-img {
